# wen

./: .clang-format  .gitignore  CMakeLists.txt  imgui.ini  readme.md
3rdlibs/VulkanMemoryAllocator/: CMakeLists.txt
3rdlibs/glfw/: CMakeLists.txt
3rdlibs/tinygltf/: CMakeLists.txt
3rdlibs/tinyobjloader/: CMakeLists.txt
cmake/: 3rdlibs.cmake  imgui.cmake  vulkan.cmake
engine/: CMakeLists.txt
engine/editor/: CMakeLists.txt
engine/parser/: CMakeLists.txt  parser.py
engine/runtime/: CMakeLists.txt
engine/runtime/include/: pch.hpp  wen.hpp
engine/runtime/include/core/base/: macro.hpp  singleton.hpp
engine/runtime/include/core/log/: log_system.hpp  logger.hpp
engine/runtime/include/core/reflect/: class_builder.hpp  reflect.hpp  reflect_system.hpp
engine/runtime/include/core/reflect/traits/: any.hpp  function.hpp  member.hpp
engine/runtime/include/core/serialize/: serialize.hpp  stream.hpp
engine/runtime/include/engine/: engine.hpp  global_context.hpp
engine/runtime/include/function/asset/: asset_system.hpp  mesh_pool.hpp
engine/runtime/include/function/asset/mesh/: mesh.hpp  primitive.hpp
engine/runtime/include/function/camera/: camera_system.hpp
engine/runtime/include/function/event/: event.hpp  event_system.hpp
engine/runtime/include/function/framework/: component.hpp  game_object.hpp  rtti.hpp  scene_manager.hpp  uuid_manager.hpp
engine/runtime/include/function/framework/component/camera/: camera_component.hpp  camera_controller_component.hpp  orthographic_camera_component.hpp  perspective_camera_component.hpp
engine/runtime/include/function/framework/component/mesh/: mesh_component.hpp
engine/runtime/include/function/framework/component/transform/: transform_component.hpp
engine/runtime/include/function/input/: input_system.hpp
engine/runtime/include/function/render/: render_data.hpp  render_system.hpp  swap_data.hpp
engine/runtime/include/function/render/interface/: context.hpp  imgui.hpp  interface.hpp  manager.hpp  renderer.hpp
engine/runtime/include/function/render/interface/basic/: basic.hpp  configuration.hpp  enums.hpp  utils.hpp
engine/runtime/include/function/render/interface/resource/: buffer.hpp  descriptor_set.hpp  image.hpp  model.hpp  push_constants.hpp  ray_tracing.hpp  render_pass.hpp  render_pipeline.hpp  vertex_input.hpp
engine/runtime/include/function/render/mesh/: mesh_instance.hpp  mesh_instance_pool.hpp
engine/runtime/include/function/render/render_framework/: render_framework.hpp  renderer.hpp  resource.hpp  subpass.hpp
engine/runtime/include/function/timer/: timer.hpp  timer_system.hpp
engine/runtime/include/function/window/: window.hpp  window_system.hpp
engine/runtime/src/core/log/: log_system.cpp  logger.cpp
engine/runtime/src/core/reflect/: reflect_system.cpp
engine/runtime/src/core/serialize/: stream.cpp
engine/runtime/src/engine/: engine.cpp  global_context.cpp
engine/runtime/src/function/asset/: asset_system.cpp  mesh_pool.cpp
engine/runtime/src/function/camera/: camera_system.cpp
engine/runtime/src/function/event/: event.cpp  event_system.cpp
engine/runtime/src/function/framework/: game_object.cpp  scene_manager.cpp  uuid_manager.cpp
engine/runtime/src/function/input/: input_system.cpp
engine/runtime/src/function/render/: render_data.cpp  render_system.cpp  swap_data.cpp
engine/runtime/src/function/render/interface/: context.cpp  imgui.cpp  interface.cpp  manager.cpp  renderer.cpp
engine/runtime/src/function/render/interface/basic/: basic.cpp  convert.cpp  utils.cpp
engine/runtime/src/function/render/interface/resource/: buffer.cpp  descriptor_set.cpp  image.cpp  model.cpp  push_constants.cpp  ray_tracing.cpp  render_pass.cpp  render_pipeline.cpp  vertex_input.cpp
engine/runtime/src/function/render/mesh/: mesh_instance_pool.cpp
engine/runtime/src/function/render/render_framework/: render_framework.cpp  renderer.cpp
engine/runtime/src/function/timer/: timer.cpp  timer_system.cpp
engine/runtime/src/function/window/: window.cpp  window_system.cpp
example/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  reflect_example.hpp
example/resources/shaders/: hit_color.glsl  random.glsl  ray_tracing.glsl  rt_chit.glsl  rt_miss.glsl  rt_rgen.glsl  shader.frag  shader.vert  sphere_chit.glsl  sphere_int.glsl  triangle_chit.glsl
sandbox/: CMakeLists.txt  main.cpp  reflect_example.hpp
